Fixed scrolling bug on sidebar, adjsted title spacing

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -21,10 +21,18 @@
     src: url(../fonts/armata/Armata-Regular.otf);
 }
 
-section h2, section h4 {
-	margin-top: 10px;
+h1 {
 	font-family: 'Open Sans', sans-serif;
 }
+
+article {
+	margin-top: -20px; /* cancels out the top margin on h2 */
+}
+section {
+	margin-bottom: 10px;
+	font-family: 'Open Sans', sans-serif;
+}
+
 
 #overview {
   position: relative;
@@ -107,26 +115,32 @@ nav.navbar-inverse {
 
 
 /* ---Sidebar style starts here--- */
-.affix {
-  top: 20px;
-  width: 213px;
+.affix-top {
+  position: relative;
 }
 
-@media (min-width: 1200px) {
-  .affix {
-    width: 235px;
-  }         
+.affix {
+  top: 20px;
+}
+
+.affix, 
+.affix-bottom {
+    width: 213px;
 }
 
 .affix-bottom {
   position: absolute;
-  width: 213px;
 }
 
 @media (min-width: 1200px) {
-  .affix-bottom {
+.affix, 
+.affix-bottom {
     width: 235px;
-  }
+  }        
+}
+
+
+@media (min-width: 1200px) {
 }
 .nav .active {
   font-weight: bold;
@@ -163,6 +177,7 @@ nav.navbar-inverse {
   display: none;
 }
 /* ---Sidebar style ends here--- */
+
 
 html,
 body {
@@ -274,8 +289,8 @@ footer .btn {
   color: white;
   margin-bottom: 30px;
 }
-section h2, section h4 {
-	margin-top: 30px;
+section {
+	margin-bottom: 20px;
 }
 
 
@@ -300,8 +315,8 @@ div.line-divide {
 	border-left: 1px solid white;
 }
 
-section h2, section h4 {
-	margin-top: 40px;
+section {
+	margin-bottom: 40px;
 }
 
 
